Big bugg fix with Playwright test and vitest not working.